crates/sakka-test/tests/trybuild/derive_non_derived.stderr
error[E0277]: the trait bound `BasicNotDerivedStruct: Encode<_>` is not satisfied
 --> tests/trybuild/derive_non_derived.rs:9:28
  |
9 | #[derive(Debug, PartialEq, Encode, Decode)]
  |                            ^^^^^^ unsatisfied trait bound
  |
help: the trait `Encode<_>` is not implemented for `BasicNotDerivedStruct`
 --> tests/trybuild/derive_non_derived.rs:4:1
  |
4 | struct BasicNotDerivedStruct {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `Encode<Ctx>`:
            BasicWithNestedStruct
            [T; N]
            bool
            f32
            f64
            i128
            i16
            i32
          and $N others
  = note: this error originates in the derive macro `Encode` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `BasicNotDerivedStruct: Decode<Ctx>` is not satisfied
  --> tests/trybuild/derive_non_derived.rs:13:13
   |
13 |     nested: BasicNotDerivedStruct,
   |             ^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Decode<Ctx>` is not implemented for `BasicNotDerivedStruct`
  --> tests/trybuild/derive_non_derived.rs:4:1
   |
 4 | struct BasicNotDerivedStruct {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `Decode<Ctx>`:
             BasicWithNestedStruct
             [T; N]
             bool
             f32
             f64
             i128
             i16
             i32
           and $N others
